--- a/formularios/ejercicios01-05_solucion_interactiva_integral.html
+++ b/formularios/ejercicios01-05_solucion_interactiva_integral.html
@@ -5,7 +5,9 @@
   <script>
 
     /**
-     * 
+     * Verifica si el array está ordenado o no.
+     * @param {integer[]} intArray - El array de números enteros
+     * @return {boolean} - TRUE si {intArray} está ordenado. Sino, FALSE
      * */
     function arrayOrdenado(intArray) {
       for (let i = 1; i < intArray.length; i++) {
@@ -16,8 +18,11 @@
     }
 
     /**
+     * Devuelve una nueva lista compuesta únicamente por los números pares del parámetro recibido.
+     * @param {integer[]} intArray - El array de números pares e impares
+     * @return {integer[]} pares - Array compuesto únicamente por números pares
      * */
-    function pares(intArray) {
+    function extraerListaDePares(intArray) {
       const pares = [];
       for (let i = 0; i < intArray.length; i++) {
         if (intArray[i] % 2 == 0 && !pares.includes(intArray[i]))
@@ -27,6 +32,9 @@
     }
 
     /**
+     * Devuelve una nueva lista sin elementos repetidos a partir del parámetro recibido
+     * @param {(Number[]|string[])} array - Lista de elementos (números o strings)
+     * @return {(Number[]|string[])} array - Lista de elementos (números o strings) sin repetir
      * */
     function elementosSinRepetir(array) {
       const arraySinRepeticiones = [];
@@ -38,6 +46,9 @@
     }
 
     /**
+     * Devuelve una nueva lista con el orden de los elementos invertidos
+     * @param {(Number[]|string[])} array - Lista de elementos (números o strings)
+     * @return {(Number[]|string[])} array - Lista de elementos (números o strings) en orden inverso
      * */
     function invertido(array) {
       const arrayInvertido = [];
@@ -48,14 +59,32 @@
     }
 
     /**
+     * Devuelve un array de números a partir de un string con números separados por comas
+     * @param {string} inputId - El ID del elemento HTML del cual extraer la lista de números
+     * @return {Number[]} result - Lista de numeros
      * */
     function capturarInputDelUsuario(inputId) {
       return document.getElementById(inputId).value.split(",").map(Number);
     }
 
     /**
+     * @typedef {Object} person
+     * @property {String} name - Nombre de la persona
+     * @age {Number} age - Edad de la persona
      * */
-    function añadirPersona(nameInputId, ageInputId) {
+
+    /**
+     * @type {person[]} 
+     * */
+    const _listaDePersonas = [];
+
+    /**
+     * Añade una nueva persona a la variable "global" _listaDePersonas
+     * @param {string} nameInputId - El ID del elemento HTML con el nombre de la persona 
+     * @param {string} ageInputId - El ID del elemento HTML con la edad de la persona 
+     * @return {void}
+     * */
+    function añadirPersonaALaLista(nameInputId, ageInputId) {
       const nombre = document.getElementById(nameInputId).value;
       const edad = Number(document.getElementById(ageInputId).value);
       _listaDePersonas.push({ name: nombre, age: edad });
@@ -65,6 +94,8 @@
     }
 
     /**
+     * Borra todos los elementos de la variable global _listaDePersonas
+     * @return {void}
      * */
     function borrarPersonas() {
       // Lectura interesante sobre como borrar todos los elementos de un array:
@@ -76,6 +107,9 @@
     }
 
     /**
+     * Devuelve un string compuesto por los elementos de la lista obtenida separados por comas
+     * @param {person[]} personArray
+     * @return {string}
      * */
     function personArrayToString(personArray) {
       const stringArray = personArray.map(function (p) {
@@ -85,6 +119,9 @@
     }
 
     /**
+     * Devuelve la lista de personas obtenida ordenada según edad y nombre de cada persona.
+     * @param {person[]} personArray
+     * @return {person[]}
      * */
     function ordenarPersonas(personArray) {
       return personArray.sort(function (a, b) {
@@ -103,7 +140,27 @@
       }); // fin del .sort()
     }
 
+    /**
+     * Devuelve una lista de números enteros aleatorios entre -10 y 10.
+     * @param {Number} length - La longitud de la lista a devolver
+     * @return {Number[]} randomIntArray 
+     * */
+    function getRndIntArray(length) {
+      const randomIntArray = [];
+      for (let i = 0; i < length; i++) {
+        randomIntArray.push(getRndInteger(-10, 10));
+      }
+      return randomIntArray;
+    }
 
+    /**
+     * Devuelve un entero entre los parámetros min y max
+     * @param {Number} min - El valor mínimo a devolver
+     * @param {Number} max - El valor máximo a devolver
+     * */
+    function getRndInteger(min, max) {
+      return Math.floor(Math.random() * (max - min + 1)) + min;
+    }
 
     function ejercicio1() {
       const numeros = capturarInputDelUsuario("input1");
@@ -117,7 +174,7 @@
     function ejercicio2() {
       const numeros = capturarInputDelUsuario("input2");
       document.getElementById("readInput2").innerHTML = "[" + numeros + "]";
-      document.getElementById("result2").innerHTML = "[" + pares(numeros) + "]";
+      document.getElementById("result2").innerHTML = "[" + extraerListaDePares(numeros) + "]";
     }
 
     function ejercicio3() {
@@ -132,7 +189,6 @@
       document.getElementById("result4").innerHTML = "[" + invertido(numeros) + "]";
     }
 
-    const _listaDePersonas = [];
     function ejercicio5() {
       let str = personArrayToString(_listaDePersonas);
       document.getElementById("readInput5").innerHTML = "[" + str + "]";
@@ -237,7 +293,7 @@
 
     <input list="nombres" type="text" id="input5a" placeholder="Alicia">
     <input type="number" id="input5b" placeholder="31" size="3">
-    <button type="button" onclick="añadirPersona('input5a','input5b');">Añadir</button>
+    <button type="button" onclick="añadirPersonaALaLista('input5a','input5b');">Añadir</button>
     <button type="button" onclick="borrarPersonas()">Borrar todos</button><br>
     <datalist id="nombres">
       <option value="John"></option>
